--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ALIVE_IMG = "https://telegra.ph/file/bdaaf89e2f5bf32c8be09.mp4"
-API_HASH = "e09df0e45a8585fbbfa98316daa4a834"
-API_ID = "7113954"
+API_HASH = "fd7acd07303760c52dcc0ed8b2f73086"
+API_ID = 2171111
 BOT_TOKEN = "5217702275:AAH0KwikoXAzjEc7qO8V9XiH1-gnTAVnFF4"
 CMD_HANDLER = "."
 DB_URI = "mongodb+srv://satya:s4tya@cluster0.rrqhs.mongodb.net/utyfky?retryWrites=true&w=majority"
